Change styles and add icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="business_name">Board Land</string>
     <string name="description">A second-hand store where everyone can find a piece of entertainment</string>
     <string name="about_us">About Us</string>
-    <string name="address_title">Address:&#160;</string>
-    <string name="email_title">Email:&#160;</string>
-    <string name="website_title">Website:&#160;</string>
+    <string name="address_title">&#160;Address:&#160;</string>
+    <string name="email_title">&#160;Email:&#160;</string>
+    <string name="website_title">&#160;Website:&#160;</string>
     <string name="address">Socratous 13, Kifisia</string>
     <string name="email">info@boardland.gr</string>
     <string name="website">www.boardland.gr</string>
